--- a/index.html
+++ b/index.html
@@ -4,13 +4,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Кем стать в ИТ сфере?">
+
+    <link rel="icon" href="img/icons/tvitter.ico">
     <title>Document</title>
 </head>
 
 <body>
 
     <header>
+        <div class="header__row">
+            <img src="img/logo.svg" alt="" class="header__img">
+            <ul class="header__navigation">
+                <li id="hideList"><a class="header__navigation__item" href="#">Программы</a></li>
+                <li><a class="header__navigation__item" href="#">Навыки</a></li>
+                <li><a class="header__navigation__item" href="#">Блог</a></li>
+                <li><a class="header__navigation__item" href="#">Лаборатория</a></li>
+            </ul>
 
+            <button class="header__btn style_btn">Начать</button>
+        </div>
     </header>
 
     <main>
@@ -35,6 +48,26 @@
                 какое направление подойдет именно Вам исходя из Ваших
                 интересов.
             </p>
+
+            <h1>Содержание статьи</h1>
+
+            <ul class="professionList">
+                <li>Web-разработчик</li>
+                <li>Frontend-разработчик</li>
+                <li>Backend-разработчик</li>
+                <li>Fullstack-разработчик</li>
+                <li>Software-разработчик</li>
+                <li>Mobile-разработчик</li>
+                <li>ML-разработчик</li>
+                <li>Web-дизайнер</li>
+                <li>UX/UI-дизайнер</li>
+                <li>ИТ-маркетолог</li>
+                <li>SMM-специалист</li>
+                <li>SEO-специалист</li>
+                <li>Менеджер по продажам ИТ-услуг</li>
+                <li>HR-специалист</li>
+                <li>Средние зарплаты специалистов</li>
+            </ul>
 
             <h1>Web-разработчик</h1>
 
@@ -151,12 +184,17 @@
 
             <p>Если же Вы не планируйте пока что изучать языки программирования, но желаете также работать в ИТ-сфере вы
                 можете
-                выбрать такие направления как:</p>
+                выбрать такие направления как:
+            </p>
 
-            Web-дизайнер
-            Дизайнер помогает создать простые и не шаблонные сайты для повышения конверсии сайта. Такие специалисты
-            владеют
-            теорией цвета и типографики, а также используют в работе Photoshop, Illustrator, Figma и Sketch.
+            <h1>Web-дизайнер</h1>
+
+            <p>
+                Дизайнер помогает создать простые и не шаблонные сайты для повышения конверсии сайта. Такие специалисты
+                владеют
+                теорией цвета и типографики, а также используют в работе <a class="textLink" href="#">Photoshop</a>, <a class="textLink" href="#">Illustrator</a>, <a class="textLink" href="#">Figma</a> и <a class="textLink" href="#">Sketch</a>.
+            </p>
+
         </section>
 
         <article>
@@ -225,7 +263,225 @@
             отталкиваться от своих интересов, возможностей и складом ума (гуманитарный и аналитически) это очень важно.
         </p>
 
+        <h1>Средние зарплаты специалистов</h1>
+
+        <table>
+            <tr>
+                <th>Профессия</th>
+                <th>Медиана</th>
+                <th>Мин./Макс.</th>
+                <th>Средняя зп</th>
+            </tr>
+            <tr>
+                <td>Web-разработчик</td>
+                <td>1750</td>
+                <td>300 / 7500</td>
+                <td>2228</td>
+            </tr>
+            <tr>
+                <td>Frontend-разработчик</td>
+                <td>2500</td>
+                <td>400 / 8000</td>
+                <td>2600</td>
+            </tr>
+
+            <tr>
+                <td>Frontend-разработчик</td>
+                <td>2500</td>
+                <td>400 / 8000</td>
+                <td>2600</td>
+            </tr>
+
+            <tr>
+                <td>Backend-разработчик</td>
+                <td>200</td>
+                <td>350 / 6000</td>
+                <td>2495</td>
+            </tr>
+
+            <tr>
+                <td>Fullstack-разработчик</td>
+                <td>2725</td>
+                <td>450 / 8500</td>
+                <td>2660</td>
+            </tr>
+
+            <tr>
+                <td>Software-разработчик</td>
+                <td>1000</td>
+                <td>150 / 3900</td>
+                <td>1083</td>
+            </tr>
+
+            <tr>
+                <td>Mobile-разработчик</td>
+                <td>3000</td>
+                <td>400 / 5200</td>
+                <td>2950</td>
+            </tr>
+
+            <tr>
+                <td>ML-разработчик</td>
+                <td>2000</td>
+                <td>350 / 5000</td>
+                <td>2660</td>
+            </tr>
+
+            <tr>
+                <td>Web-дизайнер</td>
+                <td>1000</td>
+                <td>400 / 4000</td>
+                <td>1356</td>
+            </tr>
+
+            <tr>
+                <td>UX/UI-дизайнер</td>
+                <td>1530</td>
+                <td>500 / 3500</td>
+                <td>1719</td>
+            </tr>
+
+            <tr>
+                <td>ИТ-маркетолог</td>
+                <td>1300</td>
+                <td>500 / 6000</td>
+                <td>1549</td>
+            </tr>
+
+            <tr>
+                <td>SMM-специалист</td>
+                <td>1600</td>
+                <td>250 / 4650</td>
+                <td>1702</td>
+            </tr>
+
+            <tr>
+                <td>SEO-специалист</td>
+                <td>1350</td>
+                <td>688 / 4000</td>
+                <td>1849</td>
+            </tr>
+
+            <tr>
+                <td>Менеджер по продажам ИТ-услуг</td>
+                <td>1075</td>
+                <td>450 / 5000</td>
+                <td>1696</td>
+            </tr>
+
+            <tr>
+                <td>HR-специалист</td>
+                <td>1112</td>
+                <td>300 / 5000</td>
+                <td>1319</td>
+            </tr>
+        </table>
+
+        <section class="main__iconsEmotions">
+            <img src="img/emoji/like.svg" alt="">
+            <img src="img/emoji/heart.svg" alt="">
+            <img src="img/emoji/Face_with_hearts.svg" alt="">
+            <img src="img/emoji/Face_with_tears.svg" alt="">
+            <img src="img/emoji/Astonished_face.svg" alt="">
+            <img src="img/emoji/Sad_smile.svg" alt="">
+            <img src="img/emoji/Pouting_face.svg" alt="">
+        </section>
+
+        <section>
+            <h1>Читай также</h1>
+
+            <div class="main__rowSlide">
+                <div class="main__rowSlide__item">
+                    <img src="img/imgSlide_1.png" alt="">
+
+                    <div class="main__rowSlide__item__text">
+                        Как найти работу в ИТ — план действийй
+                    </div>
+                </div>
+
+                <div class="main__rowSlide__item">
+                    <img src="img/imgSlide_2.png" alt="">
+
+                    <div class="main__rowSlide__item__text">
+                        Какие навыки нужны программисту?
+                    </div>
+                </div>
+
+                <div class="main__rowSlide__item">
+                    <img src="img/imgSlide_3.png" alt="">
+
+                    <div class="main__rowSlide__item__text">
+                        Краткий обзор языков программирования
+                    </div>
+                </div>
+                
+            </div>
+        </section>
+
+        <section>
+            <p>
+                Подпишись, чтобы <span class="textBold">не пропустить</span> наши новые статьи!
+            </p>
+            <form>
+                <input type="text" placeholder="Введи почту">
+                <button type="submit">Отправить</button>
+            </form>
+        </section>
     </main>
+
+    <footer class="footer">
+        <section class="footer__info">
+            <div class="footer__info__program">
+
+                <img src="img/logo.svg" alt="">
+
+                <ul class="footer__info__program__row">
+                    <li id="hideList"><a class="footer__info__program__item" href="#">Программы</a></li>
+                    <li><a class="footer__info__program__item" href="#">Навыки</a></li>
+                    <li><a class="footer__info__program__item" href="#">Блог</a></li>
+                    <li><a class="footer__info__program__item" href="#">Лаборатория</a></li>
+                </ul>
+
+            </div>
+
+            <div class="footer__info__contact">
+                <div class="footer__info__contact__messanger">
+                    <img src="img/icons/viber.svg" alt="">
+                    <img src="img/icons/telegram.svg" alt="">
+                    <img src="img/icons/whatsapp.svg" alt="">
+                </div>
+                <div class="footer__info__contact__num">
+                    + 375 29 369-00-77
+                </div>
+
+                <a href="#">mentoring@webdad.by</a>
+
+                <p>
+                    224016, Республика Беларусь, 
+                    г. Брест, ул. Куйбышева, д.9, оф.217
+                </p>
+            </div>
+
+            <div class="footer__info__about">
+                <div class="footer__info__about__socialNetwork">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                </div>
+                <p>
+                    Свидетельство о гос. регистрации № 291667035 от 26.10.2020
+                </p>
+                <a href="#">Политика конфиденциальности</a>
+                <a href="#">Пользовательское соглашение</a>
+            </div>
+        </section>
+
+        <section class="footer__copyright">
+            <p>© Webdad Upgrade 2021</p>
+            <p>Сайт сделан и обслуживается студентами Webdad Upgrade</p>
+        </section>
+    </footer>
 
 </body>
 
