Add a newsletter subscription form

--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
                     </p>
                     <form>
                         <input type="text" placeholder="Введи почту">
-                        <button class="style_btn" type="submit">Отправить</button>
+                        <button class="main__btn style_btn" type="submit">Отправить</button>
                     </form>
                 </div>
                 
