Add a header to the site

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <header>
         <div class="container">
             <div class="header__row">
-                <img src="img/logo.svg" alt="" class="header__img">
+                <a href="#"><img src="img/logo.svg" alt="" class="header__img"></a>
+                
                 
                 <ul class="header__navigation">
                     <li><a class="header__navigation__item hideList" href="#">Программы</a></li>
