Add a footer with contact information to the website_2

--- a/index.html
+++ b/index.html
@@ -567,11 +567,11 @@
                 </div>
 
                 <div class="footer__info__police">
-                    <p>
+                    <p class="textStyle">
                         Свидетельство о гос. регистрации № 291667035 от 26.10.2020
                     </p>
-                    <a href="#">Политика конфиденциальности</a>
-                    <a href="#">Пользовательское соглашение</a>
+                    <a class="textStyle" href="#">Политика конфиденциальности</a>
+                    <a class="textStyle" href="#">Пользовательское соглашение</a>
                 </div>
 
             </section>
