A-12: Optimize image loading on the website

--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@
 
 
             <article class="main__imgMan">
-                <img src="img/man.svg" alt="">
+                <picture>
+                    <source srcset="img/compression/man.webp" media="(orientation: portrait)"/>
+                    <img src="img/man.svg" alt="man-img">
+                </picture>
             </article>
 
             <section class="main__sectionBlock">
@@ -255,7 +258,11 @@
             </section>
 
             <article class="main__imgPC">
-                <img src="img/pc.svg" alt="">
+                <picture>
+                    <source srcset="img/compression/pc.webp" media="(orientation: portrait)"/>
+                    <img src="img/pc.svg" alt="pc-img">
+                </picture>
+                
             </article>
             <section class="main__sectionBlock">
                 <h1>UX/UI-дизайнер</h1>
@@ -470,20 +477,20 @@
                 <div class="main__slider__wrapper">
                     <h1>Читай также</h1>
                     <div class="main__slider__wrapper__rowSlide">
-                        <a href="link_to_article_1" class="main__slider__wrapper__rowSlide__item">
-                            <img src="img/imgSlide_1.png" alt="">
+                        <a href="#" class="main__slider__wrapper__rowSlide__item">
+                            <img src="img/compression/imgSlide_1.png" alt="">
                             <div class="main__slider__wrapper__rowSlide__item__text">
                                 Как найти работу в ИТ — план действий
                             </div>
                         </a>
-                        <a href="link_to_article_2" class="main__slider__wrapper__rowSlide__item">
-                            <img src="img/imgSlide_2.png" alt="">
+                        <a href="#" class="main__slider__wrapper__rowSlide__item">
+                            <img src="img/compression/imgSlide_2.png" alt="">
                             <div class="main__slider__wrapper__rowSlide__item__text">
                                 Какие навыки нужны программисту?
                             </div>
                         </a>
-                        <a href="link_to_article_3" class="main__slider__wrapper__rowSlide__item">
-                            <img src="img/imgSlide_3.png" alt="">
+                        <a href="#" class="main__slider__wrapper__rowSlide__item">
+                            <img src="img/compression/imgSlide_3.png" alt="">
                             <div class="main__slider__wrapper__rowSlide__item__text">
                                 Краткий обзор языков программирования
                             </div>
